--- a/css/style.css
+++ b/css/style.css
@@ -1,49 +1,55 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;700;900&display=swap');
 
-:root{
-    --color-priomario:#04146c;
+:root {
+    --color-priomario: #04146c;
 }
 
-*{
+* {
     margin: 0;
     font-family: 'Source Sans 3', sans-serif;
 }
 
-main{
+main {
     width: 50%;
     margin: auto;
     text-align: center;
 }
 
-.p1{
-    background-color:  var(--color-priomario);
+.p1 {
+    background-color: var(--color-priomario);
     font-size: 38.6px;
     font-weight: 400;
     color: white;
+
+
 }
 
-h2{
+h2 {
     color: var(--color-priomario);
     font-size: 88px;
     font-weight: 900;
+    padding: 50px 0;
 }
 
-.p2{
+.p2 {
     color: var(--color-priomario);
     font-size: 26.6px;
     font-weight: 400;
+    margin-bottom: 20px;
 }
 
-.p2 span{
+.p2 span {
     font-weight: 700;
 }
 
-img{
+img {
     width: 600px;
 }
-.p3{
+
+.p3 {
     color: var(--color-priomario);
     font-size: 24px;
     font-weight: 400;
     background-color: #edf7ff;
+
 }
